* Added ability to change specify the first day of the week (from Harry-Anton Talvik)
* Added Estonian calendar - holidays.et.xml (from Harry-Anton Talvik)

New Searches

* txp - Search the tweak database on tweakxp.com (from Wolfgang Deutsch)
* chmodconv - convert chmod numbers to strings and vice versa (from Brent Beardsley)
* bb - Search BestBuy (from Glenn Carr)

Modified Searches

* amaz - added domain switch to search either amaz. com de uk jp ca or fr (from Wolfgang Deutsch)
* sf - added exact and foundry switches for requiring all words and going to a foundry page (from Brent Beardsley)

Bug Fixes

* 

-- What's new for 3.1.4.4 beta (October 24, 2002)

New Searches

* fandango - Find movie information, listings, and buy tickets online (from Nikolai Devereaux)

Modified Searches

* php - fix problem with spaces in URL (from Nikolai Devereaux)
* sf - add "/list" for jumping to a SourceForge hosted list info/admin page (from Glenn Carr)

Bug Fixes

* Popup menu fix - 'Configure' was showing up in the list of search categories


-- What's new for 3.1.4.3 beta (October 23, 2002)

New aliases

* dhr and w3r, from Glenn Carr and Will Dean

New Searches

* cheapcd - Buy Cheap CDs Online at Wholesale Cost, $5 under Retail (from Steven J. Heil)
* md5 - calculate an md-5 digest for a string (from Brent Beardsley)
* tgn - Search the Getty Thesaurus of Geographical Names (from Tim Aiello)
* arin - Search the Arin Whois database at www.arin.net/whois (from Tim Aiello)
* ubl - the Ultimate Band List by ArtistDirect (from Darren Greenberg)
* viam - Find a map to any place in Europe with viamichelin.com
* cowp - Search for lyrics and chords for country songs (from Brent Beardsley)
* egw - Search Ellen G. White's writings (from Brent Beardsley)
* ostk - Search Overstock.com for items (from Brent Beardsley)
* tinyurl - tinyurl.com is a link-shortening redirector (from Brent Beardsley)
* sl - Search StudyLight.org for verses and Hebrew and Greek words