@@ -13,6 +13,7 @@ New Searches
 * txp - Search the tweak database on tweakxp.com (from Wolfgang Deutsch)
 * chmodconv - convert chmod numbers to strings and vice versa (from Brent Beardsley)
 * bb - Search BestBuy (from Glenn Carr)
+* lipsum - Generate Lorem Ipsum text (from Glenn Carr)
 
 Modified Searches
 
